5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1808_2583.log
== TEST (2019-06-29 11:53:14) 
-- CODE:
from math import*
li = int(input("Digite o limite inferiro do intervalo: "))
ls = int(input("Digite o limite superior do intervalo: "))
intervalo = arrange(li, ls)
print(intervalo)
#for i in range (li, ls):
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    intervalo = arrange(li, ls)
NameError: name 'arrange' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:53:27) 
-- CODE:
from math import*
li = int(input("Digite o limite inferiro do intervalo: "))
ls = int(input("Digite o limite superior do intervalo: "))
intervalo = arange(li, ls)
print(intervalo)
#for i in range (li, ls):
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    intervalo = arange(li, ls)
NameError: name 'arange' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:53:57) 
-- CODE:
from math import *
from numpy import *
li = int(input("Digite o limite inferiro do intervalo: "))
ls = int(input("Digite o limite superior do intervalo: "))
intervalo = arange(li, ls)
print(intervalo)
#for i in range (li, ls):
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:56:28) 
-- CODE:
from math import *
from numpy import *
li = int(input("Digite o limite inferiro do intervalo: "))
ls = int(input("Digite o limite superior do intervalo: "))
intervalo = arange(li, ls)

for num in intervalo:
	if(num%6 == 0):
		print(num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:56:42) 
-- CODE:
from math import *
from numpy import *
li = int(input("Digite o limite inferiro do intervalo: "))
ls = int(input("Digite o limite superior do intervalo: "))
intervalo = arange(li, ls)

for num in intervalo:
	if(num%6 == 0):
		print(num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-29 11:57:11) 
-- CODE:
from math import *
from numpy import *
li = int(input("Digite o limite inferiro do intervalo: "))
ls = int(input("Digite o limite superior do intervalo: "))
intervalo = arange(li, ls)

for num in intervalo:
	if(num%6 == 0):
		print(num)
-- EXECUTION TIME:
0.922935
-- TEST CASE 1:
---- input:
4
20
---- correct output:
6
12
18
---- user output:
6
12
18
-- TEST CASE 2:
---- input:
10
90
---- correct output:
12
18
24
30
36
42
48
54
60
66
72
78
84
90
---- user output:
12
18
24
30
36
42
48
54
60
66
72
78
84
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:57:21) 
-- CODE:
from math import *
from numpy import *
li = int(input("Digite o limite inferiro do intervalo: "))
ls = int(input("Digite o limite superior do intervalo: "))
intervalo = arange(li, ls)

for num in intervalo:
	if(num%6 == 0):
		print(num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 11:58:00) 
-- CODE:
from math import *
from numpy import *
li = int(input("Digite o limite inferiro do intervalo: "))
ls = int(input("Digite o limite superior do intervalo: "))
intervalo = arange(li, ls+1)

for num in intervalo:
	if(num%6 == 0):
		print(num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-29 11:58:11) 
-- CODE:
from math import *
from numpy import *
li = int(input("Digite o limite inferiro do intervalo: "))
ls = int(input("Digite o limite superior do intervalo: "))
intervalo = arange(li, ls+1)

for num in intervalo:
	if(num%6 == 0):
		print(num)
-- EXECUTION TIME:
1.09118
-- TEST CASE 1:
---- input:
4
20
---- correct output:
6
12
18
---- user output:
6
12
18
-- TEST CASE 2:
---- input:
10
90
---- correct output:
12
18
24
30
36
42
48
54
60
66
72
78
84
90
---- user output:
12
18
24
30
36
42
48
54
60
66
72
78
84
90
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
